# Standby_Zephyr

./: CMakeLists.txt  prj.conf
src/: main.c
